--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.1",
     "aos": "^3.0.0-beta.6",
     "next": "14.1.4",
     "react": "^18",
